<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/lnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_left" />
                </LinearLayout>

                <com.seazoned.landscaper.customtext.Custom_Text_View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/profiledetails"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

            </LinearLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@color/colorWhite"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/ivFeatureImage"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:alpha="0.3"
                                android:scaleType="centerCrop"
                                android:src="@mipmap/featurepic">

                            </ImageView>

                        </LinearLayout>

                        <FrameLayout
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center">

                            <com.github.siyamed.shapeimageview.CircularImageView
                                android:id="@+id/ivProfilePic"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:scaleType="centerCrop"
                                android:src="@mipmap/temp"
                                android:visibility="visible"
                                app:siBorderColor="#a6a5a5"
                                app:siBorderWidth="2dp" />

                            <com.seazoned.landscaper.customtext.Custom_Text_View_SemiBold
                                android:id="@+id/tvPicture"
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:layout_gravity="bottom|center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="@mipmap/opacityimguploadbg"
                                android:gravity="center"
                                android:paddingBottom="2dp"
                                android:text="Change"
                                android:textColor="@color/colorWhite"
                                android:textSize="12sp"
                                android:visibility="visible" />

                        </FrameLayout>

                    </FrameLayout>

                    <com.seazoned.landscaper.customtext.Custom_Text_View_SemiBold
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <com.seazoned.landscaper.customtext.Custom_Text_View_SemiBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/cellphone"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <com.seazoned.landscaper.customtext.Custom_Text_View
                        android:id="@+id/tvCellPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorProfileText"
                        android:textSize="14sp" />

                    <com.seazoned.landscaper.customtext.Custom_Text_View_SemiBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="Social Security Number"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <com.seazoned.landscaper.customtext.Custom_Text_View
                        android:id="@+id/tvSSN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorProfileText"
                        android:textSize="14sp" />


                    <com.seazoned.landscaper.customtext.Custom_Text_View_SemiBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="Email"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <com.seazoned.landscaper.customtext.Custom_Text_View
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorProfileText"
                        android:textSize="14sp" />

                    <com.seazoned.landscaper.customtext.Custom_Text_View_SemiBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="Business Address"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <com.seazoned.landscaper.customtext.Custom_Text_View
                        android:id="@+id/tvaddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorProfileText"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:id="@+id/lnDriving"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.seazoned.landscaper.customtext.Custom_Text_View_SemiBold
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:text="Driver's license"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />

                        <com.seazoned.landscaper.customtext.Custom_Text_View
                            android:id="@+id/tvDrivingLicense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColor="@color/colorProfileText"
                            android:textSize="14sp" />
                    </LinearLayout>


                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <com.seazoned.landscaper.customtext.Custom_Text_View_SemiBold
                android:id="@+id/tvEditProfile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/green_gradient_round"
                android:gravity="center"
                android:text="@string/editproofile"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>

        <fragment
            android:id="@+id/footerFragment"
            android:name="com.seazoned.landscaper.view.fragment.FootrFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout="@layout/footer_fragment" />

    </LinearLayout>

</layout>
